Fixed some formatting and spacings.

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -28,6 +28,11 @@
   width: 120%;
 }
 
+.page-content h1:not(:first-of-type) {
+  margin-top: 60px;
+}
+
+
 /* ------------------------------------------
    Container
 ------------------------------------------ */
@@ -364,9 +369,8 @@
   white-space: nowrap;
 }
 
-.smaller-project-card h2,
-.smaller-project-card .project-tags,
-.smaller-project-card .project-game-description {
+.smaller-project-card h2 {
+  margin: 6px 0 4px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -385,6 +389,16 @@
   flex-wrap: wrap;
   gap: 5px;
   justify-content: center;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.smaller-project-card .project-game-description {
+  margin-bottom: 12px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .smaller-project-card .project-description {
